[mosaic] Bound vectorized fallback batch memory